# cs4032-Project

./: README.md  client.hs  simple_echo_server.hs
authentication-server/: authentication-server.cabal  docker-compose.yml  stack.yaml
authentication-server/src/: Lib.hs
client/: UserDetails  client.cabal  stack.yaml  testing
client/app/: Main.hs
client/src/: Lib.hs  Lib.hs#  Lib.hs.save
lock-server/: docker-compose.yml  lock-server.cabal  stack.yaml
lock-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/flag-cache/: bson-generic-0.0.8-HjHLZPRZTvYCcXcEWSgvyH  directory-server-0.1.0.0-H3jp0eAcnCeL3r5IhGLevO  lock-server-0.1.0.0-6nvmaZgm0jr4RdxCcmLsJq  use-haskell-api-0.1.0.0-1MFXVymKwSB1ac1l7DE15Q  use-haskell-api-0.1.0.0-6dkny6jhFfZ7NVYxlMrlga
lock-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/lib/x86_64-linux-ghc-8.0.1/directory-server-0.1.0.0-H3jp0eAcnCeL3r5IhGLevO/: Lib.dyn_hi  Lib.hi  RestClient.dyn_hi  RestClient.hi
lock-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/lib/x86_64-linux-ghc-8.0.1/lock-server-0.1.0.0-6nvmaZgm0jr4RdxCcmLsJq/: Lib.hi
lock-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/lib/x86_64-linux-ghc-8.0.1/use-haskell-api-0.1.0.0-1MFXVymKwSB1ac1l7DE15Q/: AuthenticationAPI.dyn_hi  Lib.dyn_hi  LockAPI.dyn_hi  LockAPI.hi  LockAPIClient.dyn_hi  LockAPIClient.hi  UseHaskellAPI.dyn_hi
lock-server/.stack-work/install/x86_64-linux/nightly-2016-12-10/8.0.1/pkgdb/: bson-generic-0.0.8-HjHLZPRZTvYCcXcEWSgvyH.conf  directory-server-0.1.0.0-H3jp0eAcnCeL3r5IhGLevO.conf  lock-server-0.1.0.0-6nvmaZgm0jr4RdxCcmLsJq.conf  package.cache  use-haskell-api-0.1.0.0-1MFXVymKwSB1ac1l7DE15Q.conf
lock-server/src/: Lib.hs
use-haskell/: stack.yaml  use-haskell.cabal
use-haskell-api/: use-haskell-api.cabal
use-haskell-api/src/: UseHaskellAPI.hs  (+1 more)
(+485 files in other folders)
